<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_CR_L"
        android:layout_width="562dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/chat1"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/chat1"
        app:layout_constraintEnd_toStartOf="@+id/chat2"
        app:layout_constraintTop_toTopOf="@+id/chat2" />

    <TextView
        android:id="@+id/chat2"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/chat2"
        app:layout_constraintEnd_toStartOf="@+id/chat3"
        app:layout_constraintTop_toTopOf="@+id/chat3" />

    <TextView
        android:id="@+id/chat3"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/chat3"
        app:layout_constraintEnd_toEndOf="@+id/chat6"
        app:layout_constraintTop_toBottomOf="@+id/logo_CR_L" />

    <TextView
        android:id="@+id/chat4"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/chat4"
        app:layout_constraintEnd_toStartOf="@+id/chat5"
        app:layout_constraintTop_toBottomOf="@+id/chat1" />

    <TextView
        android:id="@+id/chat5"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/chat5"
        app:layout_constraintEnd_toStartOf="@+id/chat6"
        app:layout_constraintTop_toBottomOf="@+id/chat2" />

    <TextView
        android:id="@+id/chat6"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/chat6"
        app:layout_constraintEnd_toEndOf="@+id/logo_CR_L"
        app:layout_constraintTop_toBottomOf="@+id/chat3" />

    <TextView
        android:id="@+id/description"
        android:layout_width="529dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/chat6"
        app:layout_constraintTop_toBottomOf="@+id/chat5" />

</android.support.constraint.ConstraintLayout>