<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_CR_P"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/chat1"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/chat1"
        app:layout_constraintEnd_toStartOf="@+id/chat2"
        app:layout_constraintTop_toTopOf="@+id/chat2" />

    <Button
        android:id="@+id/chat2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/chat2"
        app:layout_constraintEnd_toStartOf="@+id/chat3"
        app:layout_constraintTop_toTopOf="@+id/chat3" />

    <Button
        android:id="@+id/chat3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:text="@string/chat3"
        app:layout_constraintBottom_toTopOf="@+id/chat6"
        app:layout_constraintEnd_toEndOf="@+id/chat6" />

    <Button
        android:id="@+id/chat4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="68dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:text="@string/chat4"
        app:layout_constraintBottom_toTopOf="@+id/feedBack_frame"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/chat5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/chat5"
        app:layout_constraintBottom_toBottomOf="@+id/chat4"
        app:layout_constraintStart_toEndOf="@+id/chat4" />

    <Button
        android:id="@+id/chat6"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/chat6"
        app:layout_constraintBottom_toBottomOf="@+id/chat5"
        app:layout_constraintStart_toEndOf="@+id/chat5" />

    <FrameLayout
        android:id="@+id/feedBack_frame"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginBottom="72dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </FrameLayout>

    <Button
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/feedback_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedBack_frame" />

    <Button
        android:id="@+id/enter"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Enter"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="26dp" />
</android.support.constraint.ConstraintLayout>