<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_chat"
        android:layout_width="354dp"
        android:layout_height="340dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/chat_body"
        app:layout_constraintEnd_toEndOf="@+id/logo_Chat"
        app:layout_constraintStart_toStartOf="@+id/logo_Chat"
        app:layout_constraintTop_toBottomOf="@+id/logo_Chat">

    <TextView
        android:id="@+id/chat_body"
        android:layout_width="354dp"
        android:layout_height="340dp"
        android:text="TextView" />


        </ScrollView>

    <EditText
        android:id="@+id/input"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/input"
        app:layout_constraintEnd_toStartOf="@+id/submit"
        app:layout_constraintTop_toBottomOf="@+id/scroll_chat" />

    <Button
        android:id="@+id/submit"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="26dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_chat" />

    <ImageView
        android:id="@+id/logo_Chat"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo_clickable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />
</android.support.constraint.ConstraintLayout>