<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="573dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_Chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/logo_clickable"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/list"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list" />
    </LinearLayout>

    <TextView
        android:id="@+id/chat_body"
        android:layout_width="419dp"
        android:layout_height="165dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/chat_body"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/input"
        android:layout_width="307dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/input"
        app:layout_constraintEnd_toStartOf="@+id/submit"
        app:layout_constraintTop_toBottomOf="@+id/chat_body" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/chat_body" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="141dp"
        android:layout_height="246dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user2"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user3"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user4"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user5"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user6"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user7"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/temp_user" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>