<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.glennguan.chatol.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="113dp"
        android:layout_height="94dp"
        android:layout_marginBottom="52dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:text="@+string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="124dp"
        android:text="@+string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/userName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintStart_toStartOf="@+id/register" />
</android.support.constraint.ConstraintLayout>
