<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="368dp"
        android:layout_height="381dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_F_P">

        <TextView
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/temp_user" />

        <TextView
            android:id="@+id/user6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/temp_user" />
    </LinearLayout>

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3" />

    <ImageView
        android:id="@+id/logo_F_P"
        android:layout_width="351dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />
</android.support.constraint.ConstraintLayout>